test/sema/exercise/struct_in_unary.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

fn main(): void {
  let s = S { x: 1 };

  !s;
  // CHECK: [[# @LINE - 1 ]]:3: error: 'S' cannot be used as an operand to unary operator
}
